# test-quantum-web

./: .coveragerc  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.server.yml  docker-compose.yml  frontend.Dockerfile  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml
nginx_config/: default.conf
quantum_web/: asgi.py  settings.py  urls.py  wsgi.py
quantum_web/webapp/: consumers.py  routing.py  views.py
quantum_web/webapp/listener/: __init__.py  collection.py  listener.py
quantum_web/webapp/tests/: test_collection.py  test_consumer.py  test_listener.py  test_routing.py  test_start_view.py
quantum_web/worker/: listener.py  queues.py  worker.py
quantum_web/worker/management/commands/: qworker.py
quantum_web/worker/tests/: test_listener.py  test_management_command.py  test_queues.py  test_worker.py
sdk_mock/: .dockerignore  .gitignore  setup.py  test.py
src/: App.css  App.js  Button.css  Button.js  Button.test.js  Chart.js  Status.css  Status.js  index.js  utils.js
